<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CategoryChoices">


    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/LLsignin"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/linebg">

        <TextView
            android:id="@+id/titleSignup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/Categories"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />


        <AutoCompleteTextView
            android:id="@+id/userprofesion"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_below="@id/titleSignup"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/linebg"
            android:gravity="start|center_vertical"
            android:hint="@string/categoryProfession"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/userText"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_below="@id/titleSignup"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="198dp"
            android:layout_toRightOf="@id/userprofesion"
            android:background="@drawable/linebg"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/categorySchool"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAccent"
            android:textSize="15dp" />


        <RelativeLayout
            android:background="@drawable/linebg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userprofesion"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_marginLeft="8dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Subjects"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectEnglish"
                        android:text="@string/CategoriesSubjectEnglish"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectMath"
                        android:text="@string/CategoriesSubjectMath"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectSst"
                        android:text="@string/CategoriesSubjectSST"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectGeog"
                        android:text="@string/CategoriesSubjectGeog"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectPhysics"
                        android:text="@string/CategoriesSubjectPhysics"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectLiterature"
                        android:text="@string/CategoriesSubjectLiterature"
                        android:textSize="20dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categoriesSubjectHistory"
                        android:text="@string/CategoriesSubjectHistory"
                        android:textSize="20dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_marginLeft="8dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TypeOfAccount"
                        android:id="@+id/typeofaccount"
                        android:textSize="18dp"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/levelOfStudy">
                        <RadioButton
                            android:id="@+id/primaryLevel"
                            android:text="@string/PrimaryLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/secondaryLevel"
                            android:text="@string/SecondaryLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/TutorLevel"
                            android:text="@string/TutorLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/LLsignin"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/registerCategories"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/skipbg"
                    android:text="string/SetUpProfile"
                    android:textColor="@color/colorWhite" />

            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>


