<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginuname"
        style="@style/makingPoststyle"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginpasswd"
        style="@style/makingPoststyle"
        android:layout_below="@id/loginuname"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_below="@id/loginpasswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark" />

    <CheckBox
        android:id="@+id/rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberme"
        android:layout_below="@id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp" />



</RelativeLayout>